# G-Lock

./: .gitattributes  .gitignore  .pre-commit-config.yaml  NOTICE  README.md  ROADMAP.md  Run G-Lock.bat  SECURITY.md  SOURCE  THIRD_PARTY_NOTICES.md  package-lock.json  package.json  pyproject.toml
.agents/: AGENTS.md
.agents/skills/docs/: SKILL.md
.agents/skills/poetry-build-automation/: SKILL.md
.agents/skills/pydivert-filter-helper/: SKILL.md
.agents/skills/stable/: SKILL.md
.agents/skills/tkinter-canvas-glassmorphism/: SKILL.md
.github/workflows/: build.yml  python.yml
archive/g_lock_python/: pyproject.toml
archive/g_lock_python/g_lock/gui/: dpi.py  icons.py  list_editor.py  main_window.py  settings_editor.py  theme.py  widgets.py
archive/g_lock_python/g_lock/menu/: menu.py
archive/g_lock_python/g_lock/network/: connectionlog.py
archive/g_lock_python/g_lock/util/: constants.py  network.py
archive/g_lock_python/spec/: version.txt
docs/: 00_Обзор_архитектуры.md  01_Интерфейс.md  02_Типы_сессий.md  03_Горячая_клавиша_F9.md  04_Списки_вайтлист_блэклист.md  05_Лог_подключений.md  CONTRIBUTING.md  DEVELOPMENT.md  Instructions_EN.txt  TESTING.md  Инструкция_RU.txt
docs/archive/: 00_Обзор_архитектуры.md  01_Интерфейс.md  03_Горячая_клавиша_F9.md  04_Списки_вайтлист_блэклист.md  06_Обработка_ошибок.md  07_Прочее.md
g_lock/: __main__.py  build.py
g_lock/config/: configdata.py
g_lock/dispatcher/: context.py
g_lock/gui/: adapter.py  dialogs.py  i18n.py  list_editor.py  main_window.py  settings_editor.py  theme.py  widgets.py
g_lock/menu/: menu.py
g_lock/network/: connectionlog.py  sessions.py  verboselog.py
g_lock/util/: crash.py  dynamicblacklist.py  hotkeys.py  network.py  process.py
g_lock/validator/: ip.py  name.py
spec/: version.txt
src/: app.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  firewall.rs  lib.rs  main.rs
src/routes/: +page.svelte
tests/: test_singleton.py
