[package]
name = "g-lock-tauri"
version = "2.0.49"
description = "Firewall-based GTA Online session protection"
authors = ["G-Lock contributors"]
edition = "2021"
license = "LGPL-3.0-only"
repository = "https://github.com/TypucT-TTV/G-Lock"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "g_lock_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "g-lock-tauri"
path = "src/main.rs"
test = false
bench = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", features = ["blocking", "json"] }
ipnet = "2.9"
once_cell = "1.19"
parking_lot = "0.12"
chrono = "0.4"
windivert = { version = "0.6.0", features = ["vendored"] }
windows-sys = { version = "0.52", features = ["Win32_System_Diagnostics_Debug", "Win32_System_Console", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging", "Win32_System_Threading", "Win32_Security", "Win32_Foundation", "Win32_Storage_FileSystem"] }
